base de datos con servicios, servicios rediseñado

--- a/app/rituales.html
+++ b/app/rituales.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/productos.css">
     <!-- link para iconos -->
     <link rel="stylesheet" href="../css/fontawesome-free-5.15.4-web/css/all.min.css">
     <title>Rituales</title>
@@ -74,7 +75,37 @@
     <article>
 
         <section>
-            
+            <div class="container mt-5">
+                <h2>Ofertas</h2>
+
+                <div class="slider carousel col-12 mt-5">
+                    <div class="row justify-content-center">
+                        <a href="https://booksy.com/es-es/20227_la-creacion-beauty-concept_barberia_29784_bencarron#ba_s=sr_1"
+                            style="color: black;">
+                            <div class="producto item">
+                                <div class="contenedor-imagen">
+                                    <img src="../img/Servicios/CORTE1.jpg" class="img-nohover">
+                                    <img src="../img/Servicios/CORTE1.jpg" class="img-hover">
+                                </div>
+                                <div class="datos">
+                                    <div class="starrr"></div>
+                                    <h4 id="nombreServicio">Diseño corte personzalizado</h4>
+                                    <small id="caracteristicas">Te asesoramos y adaptamos tu cabello a tu estilo,
+                                        genetica capilar y rostro. Lavado con shot de champu específico para tu cabello
+                                        o cuero cabelludo con un masaje express. Corte localizado y aplicación de un
+                                        producto específico de peinado.</small>
+                                </div>
+                                <div class="precios">
+                                    <div>
+                                        <h5>Precio</h5>
+                                        <small id="precioServicio">12€</small>
+                                        <hr>
+                                        <h5>Descuento en este servicio</h5>
+                                        <small id="precioServicio" style="color: red;">2x1</small>
+                                    </div>
+                                </div>
+                        </a>
+                    </div>
         </section>
         
     </article>
