menu y footer terminados, ritual cambiado por oferta.

--- a/app/ofertas.html
+++ b/app/ofertas.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/productos.css">
+    <link rel="stylesheet" href="../css/servicios.css">
     <!-- link para iconos -->
     <link rel="stylesheet" href="../css/fontawesome-free-5.15.4-web/css/all.min.css">
     <title>Rituales</title>
@@ -44,7 +44,7 @@
                                     <a class="nav-link active text-white" href="servicios.html">Servicios <i class="fas fa-cut"></i></a>
                                 </li>
                                 <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
-                                    <a class="nav-link active text-white" href="rituales.html">Ofertas <i class="fas fa-coins"></i></a>
+                                    <a class="nav-link active text-white" href="ofertas.html">Ofertas <i class="fas fa-coins"></i></a>
                                 </li>
                                 <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
                                     <a class="nav-link active text-white" href="productos.html" tabindex="-1">Productos <i class="fab fa-product-hunt"></i></a>
@@ -57,8 +57,8 @@
                                 </li>
 
                                 <li class="nav-item mx-2 col-xl-4 col-lg-4 text-center mt-4">
-                                    <button id="Inicio" type="button" value="Inicio" class="btn btn-warning" data-toggle="modal" data-target="#Modal" href="../IniciarS-Registrarte/iniciarSesion.html"> Iniciar Sesion</button>
-                                    <button id="Registro" type="button" value="Registro" class="btn btn-warning" data-toggle="modal" data-target="#Modal" href="../IniciarS-Registrarte/registrarte.html"> Registrarse</button>
+                                    <a class="btn" id="Inicio" href="../IniciarS-Registrarte/iniciarSesion.html" target="_blank">Iniciar Sesion</a>
+                                    <a class="btn" id="Registro" href="../IniciarS-Registrarte/registrarte.html" target="_blank">Registrate</a>                                
                                 </li>
 
                             </ul>
@@ -134,7 +134,7 @@
                                     <div class="thumb-content"><a href="servicios.html">Servicios</a></div>
                                 </li>
                                 <li>
-                                    <div class="thumb-content"><a href="rituales.html">Rituales</a></div>
+                                    <div class="thumb-content"><a href="ofertas.html">Ofertas</a></div>
                                 </li>
                                 <li>
                                     <div class="thumb-content"><a href="productos.html">Productos</a></div>
