--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                     <a class="nav-link active text-white" href="app/servicios.html">Servicios <i class="fas fa-cut"></i></a>
                                 </li>
                                 <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
-                                    <a class="nav-link active text-white" href="app/rituales.html">Ofertas <i class="fas fa-coins"></i></a>
+                                    <a class="nav-link active text-white" href="app/ofertas.html">Ofertas <i class="fas fa-coins"></i></a>
                                 </li>
                                 <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
                                     <a class="nav-link active text-white" href="app/productos.html" tabindex="-1">Productos <i class="fab fa-product-hunt"></i></a>
@@ -59,8 +59,8 @@
 
                                 <li class="nav-item mx-2 col-xl-4 col-lg-4 text-center mt-4">
                                     <a class="btn" id="Inicio" href="IniciarS-Registrarte/iniciarSesion.html" target="_blank">Iniciar Sesion</a>
-                                    <a class="btn" id="Registro" href="IniciarS-Registrarte/registrarte.html" target="_blank">Registrate</a>                                </li>
-
+                                    <a class="btn" id="Registro" href="IniciarS-Registrarte/registrarte.html" target="_blank">Registrate</a>                                
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -296,7 +296,7 @@
                                     <div class="thumb-content"><a href="app/servicios.html">Servicios</a></div>
                                 </li>
                                 <li>
-                                    <div class="thumb-content"><a href="app/rituales.html">Rituales</a></div>
+                                    <div class="thumb-content"><a href="app/ofertas.html">Ofertas</a></div>
                                 </li>
                                 <li>
                                     <div class="thumb-content"><a href="app/productos.html">Productos</a></div>
