Añadimos base de datos en servicios

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                             src="img/LOGO.png" alt="logo" width="200px"></a>
                                 </li>
                                 <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
-                                    <a class="nav-link active text-white" href="app/servicios.html">Servicios <i class="fas fa-cut"></i></a>
+                                    <a class="nav-link active text-white" href="app/servicios.php">Servicios <i class="fas fa-cut"></i></a>
                                 </li>
                                 <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
                                     <a class="nav-link active text-white" href="app/ofertas.html">Ofertas <i class="fas fa-coins"></i></a>
