--- a/app/contactanos.html
+++ b/app/contactanos.html
@@ -40,13 +40,10 @@
                                             src="../img/LOGO.png" alt="logo" width="200px"></a>
                                 </li>
                                 <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
-                                    <a class="nav-link active text-white" href="servicios.html">Servicios <i class="fas fa-cut"></i></a>
+                                    <a class="nav-link active text-white" href="servicios.php">Servicios <i class="fas fa-cut"></i></a>
                                 </li>
                                 <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
-                                    <a class="nav-link active text-white" href="ofertas.html">Ofertas <i class="fas fa-coins"></i></a>
-                                </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
-                                    <a class="nav-link active text-white" href="productos.html" tabindex="-1">Productos <i class="fab fa-product-hunt"></i></a>
+                                    <a class="nav-link active text-white" href="productos.php" tabindex="-1">Productos <i class="fab fa-product-hunt"></i></a>
                                 </li>
                                 <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
                                     <a class="nav-link active text-white" href="nosotros.html" tabindex="-1">Nosotros <i class="fas fa-photo-video"></i></a>
@@ -165,13 +162,10 @@
                                 <div class="thumb-content"><a href="../IniciarS-Registrarte/iniciarSesion.html">Iniciar Sesion</a></div>
                             </li>
                             <li>
-                                <div class="thumb-content"><a href="servicios.html">Servicios</a></div>
+                                <div class="thumb-content"><a href="servicios.php">Servicios</a></div>
                             </li>
                             <li>
-                                <div class="thumb-content"><a href="ofertas.html">Ofertas</a></div>
-                            </li>
-                            <li>
-                                <div class="thumb-content"><a href="productos.html">Productos</a></div>
+                                <div class="thumb-content"><a href="productos.php">Productos</a></div>
                             </li>
                             <li>
                                 <div class="thumb-content"><a href="nosotros.html">Sobre Nosotros</a></div>
