--- a/app/contactanos.html
+++ b/app/contactanos.html
@@ -73,7 +73,7 @@
             <div class="container col-12 mb-5 mt-3 text-center ">
                 <div class="row p-2 justify-content-center align-items-center">
                     <div class="card col-auto pt-2" style="width: 75%;">
-                        <img src="../img/Peluqueria.jpeg" class="card-img-top" alt="...">
+                        <img src="../img/Salon/salon3.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title ">La Creacion</h5>
                             <!-- Button trigger modal -->
