--- a/IniciarS-Registrarte/iniciarSesion.html
+++ b/IniciarS-Registrarte/iniciarSesion.html
@@ -33,7 +33,7 @@
             <div class="row justify-content-center">
                 <div class="col-auto">
                     <div name="formulario" id="formulario" class="formulario p-5 text-center">
-                            <form method="get" action="../index.html">
+                            <form action="registrar.php" method="POST" enctype="multipart/form-data" id="formRegistro">
                                 <div class="tablaFormulario">
                                     <table>
                                         <tr>
