--- a/IniciarS-Registrarte/iniciarSesion.html
+++ b/IniciarS-Registrarte/iniciarSesion.html
@@ -33,19 +33,19 @@
             <div class="row justify-content-center">
                 <div class="col-auto">
                     <div name="formulario" id="formulario" class="formulario p-5 text-center">
-                            <form action="registrar.php" method="POST" enctype="multipart/form-data" id="formRegistro">
+                            <form action="iniciarSesion.php" method="post" id="formRegistro">
                                 <div class="tablaFormulario">
                                     <table>
                                         <tr>
-                                            <th style="text-align: left;">Nombre:</th>
-                                            <td><div class="inputFormulario"><input class="input2" type="text" id="nombre" required /></div></td>
+                                            <th style="text-align: left;">Usuario:</th>
+                                            <td><div class="inputFormulario"><input class="input2" type="text" name="usuario" id="usuario" required /></div></td>
                                         </tr>
                                         <tr style="opacity: 0;">
-                                            <th style="font-size: 20%;">Nombre:</th>
+                                            <th style="font-size: 20%;">:</th>
                                         </tr>
                                         <div>
                                             <th style="text-align: left;">Contrase&ntilde;a:</th>
-                                            <td><div class="inputFormulario"><input class="input2" type="password" id="contra" required></div></td>
+                                            <td><div class="inputFormulario"><input class="input2" type="password" name="contrasena" id="contrasena" required></div></td>
                                             <td><button class="botonMostrar" type="button" onclick="mostrar()"><i class="far fa-eye"></i></button></td>
                                         </tr>
                                     </table>
@@ -76,7 +76,8 @@
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="widget subscribe no-box">
                             <h5 class="widget-title">La Creación<span></span></h5>
-                            <p>Tu barberia de confianza</p>
+                            <a href="../index.php"><img src="../img/LOGO.png" width="150em"></a>
+                            <p class="mt-2">Tu barberia de confianza</p>
                         </div>
                     </div>
 
@@ -88,19 +89,19 @@
                                     <div class="thumb-content"><a href="iniciarSesion.html">Iniciar Sesion</a></div>
                                 </li>
                                 <li>
-                                    <div class="thumb-content"><a href="../app/servicios.html">Servicios</a></div>
+                                    <div class="thumb-content"><a href="../app/servicios.php">Servicios</a></div>
                                 </li>
                                 <li>
-                                    <div class="thumb-content"><a href="../app/rituales.html">Rituales</a></div>
+                                    <div class="thumb-content"><a href="../app/rituales.php">Rituales</a></div>
                                 </li>
                                 <li>
-                                    <div class="thumb-content"><a href="../app/productos.html">Productos</a></div>
+                                    <div class="thumb-content"><a href="../app/productos.php">Productos</a></div>
                                 </li>
                                 <li>
-                                    <div class="thumb-content"><a href="../app/nosotros.html">Sobre Nosotros</a></div>
+                                    <div class="thumb-content"><a href="../app/nosotros.php">Sobre Nosotros</a></div>
                                 </li>
                                 <li>
-                                    <div class="thumb-content"><a href="../app/contactanos.html">Contáctanos</a></div>
+                                    <div class="thumb-content"><a href="../app/contactanos.php">Contáctanos</a></div>
                                 </li>
                             </ul>
                         </div>
