--- a/IniciarS-Registrarte/registrarte.html
+++ b/IniciarS-Registrarte/registrarte.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Registate</title>
+    <title>Regístate</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
         <div class="col-12">
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <a href="../index.html"><img src="../img/LOGO2.png" width="100%" alt="logo"></a>
+                    <a href="../index.php"><img src="../img/LOGO2.png" width="100%" alt="logo"></a>
                 </div>
             </div>
         </div>
@@ -33,40 +33,40 @@
             <div class="row justify-content-center">
                 <div class="col-auto">
                     <div name="formulario" id="formulario" class="formulario p-5 text-center">
-                            <form action="registrar.php" method="POST" enctype="multipart/form-data" id="formRegistro"">
+                            <form method="post" action="registrar.php">
                                 <div class="tablaFormulario">
                                 <table>
                                     <tr style="text-align: left;">
                                         <th>Nombre y Apellido:</th>
-                                        <td><div class="inputFormulario"><input class="input2" type="text" id="nombreYape" required /></td></div>
+                                        <td><div class="inputFormulario"><input class="input2" type="text" name="nombreYape" id="nombreYape" required /></td></div>
                                     </tr>
                                     <tr style="opacity: 0;">
                                         <th style="font-size: 20%;">:</th>
                                     </tr>
                                     <tr style="text-align: left;">
                                         <th>Usuario:</th>
-                                        <td><div class="inputFormulario"><input class="input2" type="text" id="usuario" required /></td></div>
+                                        <td><div class="inputFormulario"><input class="input2" type="text" name="usuario" id="usuario" required /></td></div>
                                     </tr>
                                     <tr style="opacity: 0;">
                                         <th style="font-size: 20%;">:</th>
                                     </tr>
                                     <tr style="text-align: left;">
                                         <th>E-mail:</th>
-                                        <td><div class="inputFormulario"><input class="input2" type="email" id="correo" required/></td></div>
+                                        <td><div class="inputFormulario"><input class="input2" type="email" name="correo" id="correo" required/></td></div>
                                     </tr>
                                     <tr style="opacity: 0;">
                                         <th style="font-size: 20%;">:</th>
                                     </tr>
                                     <tr style="text-align: left;">
                                         <th>DNI:</th>
-                                        <td><div class="inputFormulario"><input class="input2" type="text" id="dni" required/></td></div>
+                                        <td><div class="inputFormulario"><input class="input2" type="text" name="dni" id="dni" required/></td></div>
                                     </tr>
                                     <tr style="opacity: 0;">
                                         <th style="font-size: 20%;">:</th>
                                     </tr>
                                     <tr style="text-align: left;">
                                         <th>Contrase&ntilde;a:</th>
-                                        <td><div class="inputFormulario"><input class="input2" type="password" id="contra" required></td></div>
+                                        <td><div class="inputFormulario"><input class="input2" type="password" name="contrasena" id="contrasena" required></td></div>
                                         <td><button class="botonMostrar" type="button" onclick="mostrar()"><i class="far fa-eye"></i></button></td>
                                     </tr>
                                     
@@ -97,7 +97,8 @@
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="widget subscribe no-box">
                         <h5 class="widget-title">La Creación<span></span></h5>
-                        <p>Tu barberia de confianza</p>
+                        <a href="../index.php"><img src="../img/LOGO.png" width="150em"></a>
+                        <p class="mt-2">Tu barberia de confianza</p>
                     </div>
                 </div>
 
@@ -109,19 +110,19 @@
                                 <div class="thumb-content"><a href="iniciarSesion.html">Iniciar Sesion</a></div>
                             </li>
                             <li>
-                                <div class="thumb-content"><a href="../app/servicios.html">Servicios</a></div>
+                                <div class="thumb-content"><a href="../app/servicios.php">Servicios</a></div>
                             </li>
                             <li>
-                                <div class="thumb-content"><a href="../app/rituales.html">Rituales</a></div>
+                                <div class="thumb-content"><a href="../app/rituales.php">Rituales</a></div>
                             </li>
                             <li>
-                                <div class="thumb-content"><a href="../app/productos.html">Productos</a></div>
+                                <div class="thumb-content"><a href="../app/productos.php">Productos</a></div>
                             </li>
                             <li>
-                                <div class="thumb-content"><a href="../app/nosotros.html">Sobre Nosotros</a></div>
+                                <div class="thumb-content"><a href="../app/nosotros.php">Sobre Nosotros</a></div>
                             </li>
                             <li>
-                                <div class="thumb-content"><a href="../app/contactanos.html">Contáctanos</a></div>
+                                <div class="thumb-content"><a href="../app/contactanos.php">Contáctanos</a></div>
                             </li>
                         </ul>
                     </div>
