menu adaptado, ofertas añadidas, sesion hecha, datos del usuario adaptables

--- a/IniciarS-Registrarte/registrarte.html
+++ b/IniciarS-Registrarte/registrarte.html
@@ -67,7 +67,7 @@
                                     <tr style="text-align: left;">
                                         <th>Contrase&ntilde;a:</th>
                                         <td><div class="inputFormulario"><input class="input2" type="password" name="contrasena" id="contrasena" required></td></div>
-                                        <td><button class="botonMostrar" type="button" onclick="mostrar()"><i class="far fa-eye"></i></button></td>
+                                        <td><button class="botonMostrar" type="button" onclick="mostrar()"><i  id="icono" class="far fa-eye"></i></button></td>
                                     </tr>
                                     
                                 </table>
@@ -141,7 +141,7 @@
                     <div class="widget no-box">
                         <h5 class="widget-title">Redes Sociales<span></span></h5>
 
-                        <p><a href="mailto:info@domain.com" title="glorythemes">rafabarea.20@campuscamara.es</a></p>
+                        <p><a href="mailto:lacreacionbeuty@gmail.com" title="glorythemes">lacreacionbeuty@gmail.com</a></p>
                         <ul class="social-footer2">
                             <li class=""><a title="youtube" target="_blank" href="https://bit.ly/3m9avif"><img
                                         alt="youtube" width="30" height="30"
@@ -171,7 +171,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <p>Copyright Company Name © 2021. All rights reserved.</p>
+                    <p>Copyright La Creación © 2022. All rights reserved.</p>
                 </div>
             </div>
         </div>
