--- a/IniciarS-Registrarte/iniciarSesion.html
+++ b/IniciarS-Registrarte/iniciarSesion.html
@@ -103,6 +103,9 @@
                                 <li>
                                     <div class="thumb-content"><a href="../app/contactanos.php">Contáctanos</a></div>
                                 </li>
+                                <li>
+                                    <div class="thumb-content"><a href="../app/promociones.php">Promociones</a></div>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -147,10 +150,13 @@
         </div>
 
         <div class="footer-copyright">
-            <div class="container">
+            <div class="container col-12">
                 <div class="row">
-                    <div class="col-md-12 text-center">
-                        <p>Copyright La Creación © 2022. All rights reserved.</p>
+                    <div class="col-8">
+                        <a href="../politicas.php"><p>Politicas de privacidad.</p></a>
+                    </div>
+                    <div class="col-4">
+                        <p>Copyright La Creación © 2022.</p>
                     </div>
                 </div>
             </div>
