--- a/IniciarS-Registrarte/registrarte.html
+++ b/IniciarS-Registrarte/registrarte.html
@@ -80,7 +80,7 @@
                                     <div id="errores" class="col-auto errores"></div>
                                 </div>
                             </div>
-                            <a class="mt-3" href="iniciarSesion.html">Iniciar Sesión</a>
+                            <a class="mt-3" href="iniciarSesion.php">Iniciar Sesión</a>
                         </form>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                             <h5 class="widget-title">Enlaces<span></span></h5>
                             <ul class="thumbnail-widget">
                                 <li>
-                                    <div class="thumb-content"><a href="iniciarSesion.html">Iniciar Sesion</a></div>
+                                    <div class="thumb-content"><a href="iniciarSesion.php">Iniciar Sesion</a></div>
                                 </li>
                                 <li>
                                     <div class="thumb-content"><a href="../app/servicios.php">Servicios</a></div>
@@ -186,6 +186,7 @@
     <!-- Scripts -->
     <script src="../js/RegistroUsuarios.js"></script>
     <script src="../js/mostrarContra.js"></script>
+    <script src="../js/validarRegistro.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
